cmake_minimum_required( VERSION 3.0 )

SET ( bin demo)
SET ( src main.cpp demo.cpp demo.h getopt.c getopt.h )

INCLUDE_DIRECTORIES( ${F3D_INCLUDE_INSTALL_DIR}
					 "${CMAKE_CURRENT_SOURCE_DIR}/include"
					 "${CMAKE_SOURCE_DIR}/include"
 )
LINK_DIRECTORIES( ${F3D_LIB_INSTALL_DIR} ${CMAKE_LIBRARY_OUTPUT_DIRECTORY} )

ADD_EXECUTABLE( ${bin} ${src} )
TARGET_LINK_LIBRARIES ( ${bin} ${F3D_LIB_NAME} )
SET_TARGET_PROPERTIES( ${bin} PROPERTIES
						OUTPUT_NAME ${bin}
)
ADD_DEPENDENCIES( ${bin} firestone )
INSTALL( TARGETS ${bin}
		 LIBRARY DESTINATION ${F3D_LIB_INSTALL_DIR}
		 ARCHIVE DESTINATION ${F3D_LIB_INSTALL_DIR}
		 RUNTIME DESTINATION ${F3D_BIN_INSTALL_DIR}
)